Fix scrollbar on locate button.

--- a/views/public/css/mall-map.css
+++ b/views/public/css/mall-map.css
@@ -158,7 +158,7 @@ a#locate-button {
     box-sizing: border-box;
     border: 1px solid #78B6EB;
     border-radius: 3px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 a#locate-button {
